added images and bootstrap

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the jobs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.recommended{
+	margin-top: 10px;
+	width: 350px;
+	height: 300px;
+}
+
+#seth{
+	float: left;
+	margin-left: 20px;
+}
+
+#james{
+	float: right;
+	margin-right: 20px;
+}
