--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="page-header">
 	<h1><%= @job.title %></h1>
 	<p><%= @job.description %></p>
 	<p><%= @job.user.clinic_name %></p>
