--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,19 +16,56 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
+// NAVBAR
+#logo{
+	float: left;
+	
+}
 
 nav .container{
 	width: 940px;
 }
-.nav{
-	float: none;
-	margin: 0 auto 0 auto;
-	width: 450px;
-}
-.navbar-text {
-	float: none;
-	display: inline-block;
-	margin: 0 auto 0 auto;
-	text-align: center;
+
+nav .navbar-nav{
+	margin: 10px auto 10px auto;
 }
 
+nav .nav-sections{
+	margin-top: 70px;
+
+}
+
+nav .nav-sections-right{
+	margin-top: 87px;
+
+}
+
+.nav-icons{
+	padding-top: 8px;
+	margin-right: 15px;
+}
+// FOOTER/////////////////////////////////////
+html,
+body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px;
+}
+
+.social{
+	margin-top: 13px;
+	margin-bottom: 10px;
+}
+
+#footer {
+  padding-top: 1px;
+  height: 70px;
+  background-color: #f5f5f5;
+}
