--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,12 @@
 	
 }
 
+.navbar-default {
+  background-color: #ffffff;
+  border-color: #6cb7a1;
+  border-radius: 8px;
+}
+
 nav .container{
 	width: 940px;
 }
@@ -67,5 +73,5 @@ body {
 #footer {
   padding-top: 1px;
   height: 70px;
-  background-color: #f5f5f5;
+  background-color: #DFF0D8;
 }
