--- a/app/views/jobs/_recommended.html.erb
+++ b/app/views/jobs/_recommended.html.erb
@@ -1,7 +1,7 @@
 <!--------------------- TOP RATED -------------------->
 
 
-<div class="jumbotron">
+<div id="jumbotron">
   <div class="container">
  	<h3 class="text-center">
  		Top Rated 
@@ -38,12 +38,35 @@
 </div>
 
 <!--------------------- TOP EVENTS -------------------->
-<div class="panel panel-default">
+<div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Top Events</h3>
+    <h3 class="panel-title">May 12 Friday</h3>
   </div>
+  
   <div class="panel-body">
-    Panel content
+  <div class="container">
+    <div class="events-img"> 
+      <%= image_tag "ccup.png"%>
+      <div class="events-description text-center">        
+        <h4>2015 Cannabis Cup</h4>
+        <p>Colorado</p>
+      </div>
+    </div>
+      <div class="events-img">  
+        <%= image_tag "moxie.png"%>
+        <div class="events-description text-center">
+          <h4>Moxie Seed and more Trade Show</h4>
+          <p>Los Angeles</p>
+      </div>
+    </div>
+      <div class="events-img">   
+        <%= image_tag "cchew.png"%>
+        <div class="events-description text-center">
+          <h4>Cheeba Chews Exclusive Pre Launch</h4>
+          <p>San Francisco</p>
+      </div>
+    </div>
+  </div>
   </div>
 </div>
 
