--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
 			 <ul class="nav navbar-nav navbar-left" >
 
        			<li id="logo"> 
-       			<%= image_tag "logo.png"%></li>
+       				<%= image_tag "logo.png"%>
+       			</li>
 
 		        <li class="nav-sections" >
 		        	<%= link_to "Home", jobs_path  %>
