--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -6,6 +6,11 @@
 	margin: 30px auto 0 auto;
 }
 
+// TOP RATED JUMBOTRON/////////////////////////
+#jumbotron {
+  background-color: #ffffff;
+}
+
 .recommended{
 	margin-top: 20px;
 	width: 350px;
@@ -19,7 +24,7 @@
 
 #james{
 	float: right;
-	margin-right: 20px;
+	margin-right: 30px;
 }
 
 .jumbotron .recommended-name{
@@ -40,6 +45,38 @@
 	padding-left: 20px;
 }
 
-.job-list{
+// EVENTS///////////////////////////////
+.panel{
+	margin-top: 60px;
+}
+
+
+.events-img{
+	margin-left: 90px;
+}
+
+.events-description{
+	width: 300px;
+	margin-left: 80px;
+	display: inline-block;
+}
+
+.panel-body .container{
+	margin-top: 20px;
+}
+
+// JOBS//////////////////////////////////
+h2 a{
+	color: #4A9B6A;
+}
+
+button a{
+	color: #4A9B6A;
+}
+
+// LOGIN///////////////////////////////
+.form-group .btn-primary{
+	background-color:#4A9B6A;
+	border-color: #4A9B6A;
 
 }
