--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,18 +21,13 @@
         <% end %>
       
         <div class="form-group">
-          <%= f.label :name %>
-          <%= f.text_field :name, class: "form-control" %>
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: "form-control" %>
         </div>
 
         <div class="form-group">
-          <%= f.label :clinic_name %>
-          <%= f.text_field :clinic_name, class: "form-control" %>
-        </div>
-
-        <div class="form-group">
-          <%= f.label :registration_number %>
-          <%= f.text_field :registration_number, class: "form-control" %>
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: "form-control" %>
         </div>
 
         <div class="form-group">
